# fold-bpt-stake

./: .env.example  .gitignore  .prettierrc  LICENSE  README.md  foundry.toml  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  remappings.txt  slither.config.json
.github/workflows/: forge.yaml  slither.yaml
contracts/: DisperseL2.sol  MyLzApp.sol  Owned.sol  StakedBPT.sol  StakedCLP.sol  StakedCPT.sol  StakedPT.sol  StakedUPT.sol
contracts/interfaces/: IBPT.sol  IBasicRewards.sol  IBooster.sol  ICrvDepositor.sol  ICurveV2Pool.sol  IERC20.sol  IMevEth.sol  INonfungiblePositionManager.sol  IRewards.sol  IStash.sol  ITokenWrapper.sol  IVault.sol  IVirtualRewards.sol  IWETH.sol
deploy/: 00_MyLzApp.ts  00_StakedBPT.ts
lib/solmate/src/auth/: Auth.sol
lib/solmate/src/mixins/: ERC4626.sol
lib/solmate/src/test/: Auth.t.sol  CREATE3.t.sol  DSTestPlus.t.sol  ERC1155.t.sol  ERC20.t.sol  ERC721.t.sol  FixedPointMathLib.t.sol  MerkleProof.t.sol  MultiRolesAuthority.t.sol  RolesAuthority.t.sol  SSTORE2.t.sol  SafeTransferLib.t.sol
lib/solmate/src/tokens/: ERC1155.sol  ERC1155B.sol  ERC20.sol  ERC721.sol
lib/solmate/src/utils/: CREATE3.sol  LibBitmap.sol  (+5 more)
script/: DeployStakedBPT.s.sol  DeployStakedCLP.s.sol  DeployStakedCPT.s.sol  deploy-stakedBPT.sh  deploy-stakedCLP.sh  deploy-stakedCPT.sh  deploy-test-stakedBPT.sh  deploy-test-stakedCLP.sh
test/: StakedBPT.test.ts  getLiquidityPositions.js  utils.ts
test/foundry/: StakedBPT.t.sol  StakedCLP.t.sol  StakedCPT.t.sol  StakedUPT.t.sol
test/foundry/interfaces/: IVault.sol  IWETH.sol
(+18 files in other folders)
